add readme and dump

--- a/url_shorter_app/templates/url_shorter_app/create_url.html
+++ b/url_shorter_app/templates/url_shorter_app/create_url.html
@@ -5,7 +5,7 @@
     <title>Create Short Url</title>
 </head>
 <body>
-    <a href="{% url 'url_shorter_app:index' %}">Home</a>
+    <a href="{% url 'url_shorter_app:index' %}">List all shorts</a>
     <h1>Create Short Url</h1>
     <form action="{% url 'url_shorter_app:create' %}" method="post">
         {% csrf_token %}
