--- a/url_shorter_app/templates/url_shorter_app/detail.html
+++ b/url_shorter_app/templates/url_shorter_app/detail.html
@@ -5,7 +5,7 @@
     <title>{{object}}</title>
 </head>
 <body>
-    <a href="{% url 'url_shorter_app:index' %}">Home</a>
+    <a href="{% url 'url_shorter_app:index' %}">List all shorts</a>
     <a href="{% url 'url_shorter_app:create' %}">Create short path</a>
 
     <h1>{{ object }}</h1>
